<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orders_history_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view19"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/ic_shopping_bag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/order_history"
            android:textColor="#33333A"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view19"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view24"
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_address_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders_history_pane">

        <View
            android:id="@+id/view20"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/my_address"
            android:textColor="#33333A"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view20"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view25"
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/payment_methods_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_address_pane">

        <View
            android:id="@+id/view21"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_pay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/payment"
            android:textColor="#33333A"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view21"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view26"
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/special_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_methods_pane">

        <View
            android:id="@+id/view22"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_passion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/special"
            android:textColor="#33333A "
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view22"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view27"
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_promo_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/special_pane">

        <View
            android:id="@+id/view23"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_sale"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/my_promo"
            android:textColor="#33333A"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/view23"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view28"
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:background="@drawable/ripple_effect"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView69"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/contact_support"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>